--- a/source/_includes/table.html
+++ b/source/_includes/table.html
@@ -19,151 +19,124 @@
 
 {% assign all_issues = all_issues | uniq | sort %}
 
+<section class="table table-two examples-grid js-active-key slide-panel__wrapper--compact fixed-section-wrapper">
 
-<section class="table">
-  <div class="row expanded">
-    <table class="js-active-key slide-panel__wrapper--compact fixed-section-wrapper">
-      <thead>
-        <tr>
-          <th>Criteria</th>
-          <th class="title-leading"><a
-              href="{{ '/state-standard-of-excellence/leading-examples.html' | relative_url }}">Leading Examples<i
-                class="material-icons launch-leading">launch</i></a></th>
-          <th class="title-promising">Promising Examples</th>
-        </tr>
-        <span class="top-bar__button js-trigger-menu">more_vert</span>
-        <tr class="state-types">
-          <td colspan="3">
-            <div class="issues-dropdown-filter-wrapper row align-center">
-              <div class="select issues-dropdown-filter">
-                <select aria-label="issues dropdown filter" class="issues-dropdown-filter__select">
-                  <option class="issues-dropdown-filter__option" value="all">Select an Issue</option>
-                  {% for issue in all_issues %}
-                  <option class="issues-dropdown-filter__option" value="{{issue | slugify }}"
-                    data-page="{{ issue | slugify }}">{{issue}}</option>
-                  {% endfor %}
-                </select>
-              </div>
-              {%include key-content.html issues=all_issues%}
-            </div>
-          </td>
-        </tr>
-      </thead>
-      <tbody>
-      {% for item in criteria %}
-      <tr class="criteria">
-        {% assign title = item.title | replace: "/", "0000" | slugify | remove: "0000" %}
-        {% assign url = "/state-standard-of-excellence/" | append: title | append: ".html" %}
-        <td class="title" onclick="window.location='{{ url | relative_url }}';">
-          <span>
-            <a href="{{ url | relative_url }}"><span class="before-launch">{{ item.title }}</span></a>
-          </span>
-          <span class="tooltip">
-            {{ item.description }}
-          </span>
-        </td>
-        {% assign leading-type = item.leading_list.type %}
-        {% assign url-leading-example = "/state-standard-of-excellence/" | append: title | append: ".html" | append: "#leading-example"%}
+  <!-- examples-grid header -->
+  <div class="row expanded examples-grid__header fixed-section ">
+    <div class="row expanded examples-grid__header-row">
+      <!-- header columns  -->
+      <div class="column examples-grid-column examples-grid__header-cell">Criteria</div>
+      <div class="column examples-grid-column examples-grid__header-cell title-leading"><a
+          href="{{ '/state-standard-of-excellence/leading-examples.html' | relative_url }}">Leading Examples<i
+            class="material-icons launch-leading">launch</i></a></div>
+      <div class="column examples-grid-column examples-grid__header-cell title-promising">Promising Examples</div>
+    </div>
+    <div class="row expanded  align-center examples-grid__header-row examples-grid__filter-row">
+      <div class="issues-dropdown-filter-wrapper">
+        <div class="select issues-dropdown-filter">
+          <select aria-label="issues dropdown filter" class="issues-dropdown-filter__select">
+            <option class="issues-dropdown-filter__option" value="all">Select an Issue</option>
+            {% for issue in all_issues %}
+            <option class="issues-dropdown-filter__option" value="{{issue | slugify }}"
+              data-page="{{ issue | slugify }}">{{issue}}</option>
+            {% endfor %}
+          </select>
+        </div>
+      </div>
 
-        {%comment%} Leading Mobile and Desktop{%endcomment%}
-        <td class="leading leading--mobile" onclick="window.location='{{ url-leading-example | relative_url }}';">
-          <!-- Leading issues -->
-          {% assign leading_issues = "" | split: "" %}
-          {% for issue in item.leading_list.issue %}
-          {% assign issue_slug = issue | slugify %}
-          {% assign leading_issues = leading_issues | push: issue_slug %}
-          {% endfor %}
+        <a class="key slide-panel__open" data-term="key">Key<i class="material-icons">more_vert</i></a>
 
-          <div class="examples-wrapper" data-examples="all {{leading_issues | join: " "}}">
-            <div class="row align-center">
-              <div class="leading__state column large-12">
+    </div>
+  </div>
 
+  {%include key-content.html issues=all_issues%}
+
+  <div class="content-section">
+    
+    <!-- grid content -->
+    {% for item in criteria %}
+    {% assign title = item.title | replace: "/", "0000" | slugify | remove: "0000" %}
+    {% assign url = "/state-standard-of-excellence/" | append: title | append: ".html" %}
+    {% assign url_leading_example = "/state-standard-of-excellence/" | append: title | append: ".html" | append: "#leading-example"%}
+
+    <div class="row expanded examples-grid__content-row criteria">
+      <!-- content columns  -->
+      <div class="column examples-grid-column examples-grid__content-cell title"
+        onclick="window.location='{{ url | relative_url }}';">
+        <span>
+          <a href="{{ url | relative_url }}"><span class="before-launch">{{ item.title }}</span></a>
+        </span>
+        <span class="tooltip">
+          {{ item.description }}
+        </span>
+      </div>
+
+      <div class="column examples-grid-column examples-grid__content-cell leading leading--desktop">
+        <!-- Leading issues -->
+        {% assign leading_issues = "" | split: "" %}
+        {% for issue in item.leading_list.issue %}
+        {% assign issue_slug = issue | slugify %}
+        {% assign leading_issues = leading_issues | push: issue_slug %}
+        {% endfor %}
+        <div class="examples-wrapper" data-examples="all {{leading_issues | join: " "}}">
+          <div class="row">
+            <div class="leading__state column large-12">
+              <span class="state-abbrev">
                 <a style="text-decoration:none;"
-                  href="{{ url-leading-example | relative_url }}">{{item.leading_list.state_abbreviation}}
+                  href="{{ url_leading_example | relative_url }}">{{item.leading_list.state_abbreviation}}
                 </a>
-                <div class="issue--mobile">
-                  {% for issue in item.leading_list.issue %}
-                  <div class="issue issue--leading issue--{{ issue | slugify }}"></div>
-                  {% endfor %}
-                </div>
-              </div>
+              </span>
+            </div>
+            <div class="description column large-12">
+              {{item.leading_list.short_description}}
             </div>
           </div>
-        </td>
-        <td class="leading leading--desktop">
-          <div class="examples-wrapper" data-examples="all {{leading_issues | join: " "}}">
-            <div class="row">
-              <div class="leading__state column large-12">
-                <span class="state-abbrev">
-                  <a style="text-decoration:none;"
-                    href="{{ url-leading-example | relative_url }}">{{item.leading_list.state_abbreviation}}
-                  </a>
-                </span>
-              </div>
-              <div class="description column large-12">
-                {{item.leading_list.short_description}}
-              </div>
+          <div class="link row">
+            <div class="column large-7 issues-container">
+              {% for issue in item.leading_list.issue %}
+              <span class="issue issue--leading issue--{{ issue | slugify }}"></span>
+              {% endfor %}
             </div>
-            <div class="link row">
-              <div class="column large-7">
-                {% for issue in item.leading_list.issue %}
-                <span class="issue issue--leading issue--{{ issue | slugify }}"></span>
-                {% endfor %}
-              </div>
-              <div class="column large-5">
-                <a class="learn-more" href="{{ url-leading-example | relative_url }}">Learn More</a>
-              </div>
+            <div class="column large-5">
+              <a class="learn-more" href="{{ url_leading_example | relative_url }}">Learn More</a>
             </div>
           </div>
-        </td>
+        </div>
+      </div>
+      <div class="column examples-grid-column examples-grid__content-cell promising">
+        {% for state in item.promising_list %}
+        {% assign issues = state.issue %}
+        {% assign state-slug = state.state | slugify %}
+        {% assign url-promising-examples = "/state-standard-of-excellence/" | append: title | append: ".html#" | append: state-slug  %}
+        <!-- Promsing issues -->
+        {% assign promising_issues = "" | split: "" %}
+        {% for issue in issues %}
+        {% assign issue_slug = issue | slugify %}
+        {% assign promising_issues = promising_issues | push: issue_slug %}
+        {% endfor %}
 
-        <td class="promising">
-          {% for state in item.promising_list %}
-          {% assign issues = state.issue %}
-          {% assign state-slug = state.state | slugify %}
-          {% assign url-promising-examples = "/state-standard-of-excellence/" | append: title | append: ".html#" | append: state-slug  %}
-          <!-- Promsing issues -->
-          {% assign promising_issues = "" | split: "" %}
-          {% for issue in issues %}
-          {% assign issue_slug = issue | slugify %}
-          {% assign promising_issues = promising_issues | push: issue_slug %}
-          {% endfor %}
+        <div class="examples-wrapper" data-examples="all {{promising_issues | join: " "}}">
 
-          <div class="examples-wrapper" data-examples="all {{promising_issues | join: " "}}">
+          <a href="{{ url-promising-examples | relative_url }}" class="promising__state promising__state--desktop">
+            <div class="state__issues promising-type">
+              <span class="state__title">{{ state.state }}</span>
+              <span class="state__abbreviation">{{ state.state_abbreviation }}</span>
 
-            <a href="{{ url-promising-examples | relative_url }}" class="promising__state promising__state--desktop">
-              <div class="state__issues promising-type">
-                <span class="state__title">{{ state.state }}</span>
+              {% if issues %}
+              {% for issue in issues %}
+              <span class="issue issue--{{ issue | slugify }}"></span>
+              {% endfor %}
+              {% endif %}
+            </div>
+          </a>
+        </div>
 
-                {% if issues %}
-                {% for issue in issues %}
-                <span class="issue issue--{{ issue | slugify }}"></span>
-                {% endfor %}
-                {% endif %}
-              </div>
-            </a>
-          </div>
+        {% endfor %}
+      </div>
+    </div>
 
-          <div class="examples-wrapper" data-examples="all {{promising_issues | join: " "}}">
-
-            <a href="{{ url-promising-examples | relative_url }}" class="promising__state promising__state--mobile">
-              <div class="state__issues promising-type">
-                <span class="state__title">{{ state.state_abbreviation }}</span>
-
-                {% if issues %}
-                {% for issue in issues %}
-                <span class="issue issue--{{ issue | slugify }}"></span>
-                {% endfor %}
-                {% endif %}
-              </div>
-            </a>
-          </div>
-          {% endfor %}
-        </td>
-      </tr>
-      {% endfor %}
-      </tbody>
-    </table>
-
+    {% endfor %}
+  </div>
+  </div>
   </div>
 </section>
