Edit header column sizes

--- a/source/_includes/table.html
+++ b/source/_includes/table.html
@@ -25,7 +25,7 @@
   <div class="row expanded examples-grid__header fixed-section ">
     <div class="row expanded examples-grid__header-row">
       <!-- header columns  -->
-      <div class="column examples-grid-column examples-grid__header-cell">Criteria</div>
+      <div class="column examples-grid-column examples-grid__header-cell title-criteria">Criteria</div>
       <div class="column examples-grid-column examples-grid__header-cell title-leading"><a
           href="{{ '/state-standard-of-excellence/leading-examples.html' | relative_url }}">Leading Examples<i
             class="material-icons launch-leading">launch</i></a></div>
