Edit launch icon size

--- a/source/_layouts/criteria.html
+++ b/source/_layouts/criteria.html
@@ -25,7 +25,7 @@ criteria_dropdown_nav: true
       <div class="column large-8 medium-8 small-12">
         <h1>{{criteriaYear}} State Standard of Excellence</h1>
         <hr>
-        <h2>{{page.title}}</h2>
+        <h2>{{page.order}}. {{page.title}}</h2>
       </div>
     </div>
     <div class="button-container button-container--align-left row">
