--- a/source/_includes/table.html
+++ b/source/_includes/table.html
@@ -64,7 +64,7 @@
       <div class="column examples-grid-column examples-grid__content-cell title"
         onclick="window.location='{{ url | relative_url }}';">
         <span>
-          <a href="{{ url | relative_url }}"><span class="before-launch">{{ item.title }}</span></a>
+          <a href="{{ url | relative_url }}"><span class="before-launch">{{ item.order }}. {{ item.title }}</span><i class="material-icons launch-leading launch-leading--title">launch</i></a>
         </span>
         <span class="tooltip">
           {{ item.description }}
