Accessibility edits adds landmarked sections labels img alt text and hidden screen reader labels

--- a/source/_includes/copyright.html
+++ b/source/_includes/copyright.html
@@ -1,31 +1,31 @@
-<div class="copyright">
+<div class="copyright" aria-label="copyrights and social media links">
   <div class="row expanded">
     <div class="column small-12 medium-12 large-9">
       <p><span class="copyrights">Copyright {{site.content_year}} Results for America. All rights reserved.</span> <span class="privacy"><a href="http://results4america.org/privacy-policy/">Privacy Policy</a></span></p>
     </div>
     <div class="column small-12 medium-12 large-3 social-links-container">
       <div class="social-links">
-        <ul>
+        <ul aria-label="social media links">
           <li class="twitter">
             <a href="https://twitter.com/results4america" target=
-            "_blank"><i aria-hidden="true" class="fa fa-twitter"></i></a>
+            "_blank"><i class="fa fa-twitter"><span class="visible-hidden">Twitter Link</span></i></a>
           </li>
           <li class="facebook">
             <a href="https://www.facebook.com/Results4America.org/" target=
-            "_blank"><i aria-hidden="true" class="fa fa-facebook"></i></a>
+            "_blank"><i class="fa fa-facebook"><span class="visible-hidden">Facebook Link</span></i></a>
           </li>
           <li class="instagram">
             <a href="https://www.instagram.com/results4america/" target=
-            "_blank"><i aria-hidden="true" class="fa fa-instagram"></i></a>
+            "_blank"><i class="fa fa-instagram"><span class="visible-hidden">Instagram Link</span></i></a>
           </li>
           <li class="medium">
             <a href="https://medium.com/@Results4America" target=
-            "_blank"><i aria-hidden="true" class="fa fa-medium"></i></a>
+            "_blank"><i class="fa fa-medium"><span class="visible-hidden">Medium Link</span></i></a>
           </li>
           <li class="youtube-play">
             <a href="https://www.youtube.com/channel/UCCDgyIwYSdDGL1L0GNjcjWA"
-            target="_blank"><i aria-hidden="true" class=
-            "fa fa-youtube-play"></i></a>
+            target="_blank"><i class=
+            "fa fa-youtube-play"><span class="visible-hidden">YouTube Link</span></i></a>
           </li>
         </ul>
       </div>
