--- a/source/_includes/footer.html
+++ b/source/_includes/footer.html
@@ -1,7 +1,7 @@
-<footer>
+<footer aria-label="footer">
   <div class="row">
     <div class="column">
-      <img class="logo"src={{'/images/rfa-color.svg' | relative_url}} />
+      <img class="logo" alt="Results For America Logo" src={{'/images/rfa-color.svg' | relative_url}} />
     </div>
   </div>
 </footer>
