--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -15,12 +15,12 @@
       <a class="main-link">Examples by Criteria</a>
     </div>
 
-  </nav> 
+  </nav>
 
   <div class="color-overlay">
     <span class="top-bar__logo"><a href="https://results4america.org/"><img src="{{'/images/rfa-white.svg' | relative_url }}" alt="Results for America 2018 Logo"></a></span>
 
-    
+
   </div>
 </header>
 
@@ -28,7 +28,7 @@
 {%include criteria-dropdown-nav.html %}
 {% endif %}
 
-<div class="media-icons">
+<div class="media-icons"  aria-label="social media toolbar">
   <div class="row align-right expanded">
     <div class="column large-3 social-media-toolbar">
         {% include share_links.html %}
