--- a/source/_includes/top-bar.html
+++ b/source/_includes/top-bar.html
@@ -1,26 +1,25 @@
 <header class="top-bar" style="background-image:url({{'/images/map-overlay.png' | relative_url}})">
 
-  <span class="top-bar__button js-trigger-menu">menu</span>
-  <nav class="main-menu js-target-menu main-menu--left">
-    <div class="top-bar__controls">
-      <span class="top-bar__button js-close-menu">close</span>
+  <span class="top-bar__button js-trigger-nav" data-direction="left">menu</span>
+  <nav class="nav">
+    <div class="nav__container">
+      <div class="top-bar__controls">
+        <span class="top-bar__button js-close-nav">close</span>
+      </div>
+      <div class="nav--links">
+        <a class="main-link" href="{{'/downloads.html' | relative_url}}">Downloads</a>
+        <a class="sub-link">2019 State Standard Report</a>
+        <a class="sub-link">2019 Leading Examples</a>
+        <a class="sub-link">2019 Criteria Questions</a>
+        <a class="sub-link">State Spotlights </a>
+        <a class="main-link" href="{{'/state-standard-of-excellence/leading-examples.html' | relative_url}}">Leading Examples</a>
+        <a class="main-link">Examples by Criteria</a>
+      </div>
     </div>
-    <div class="main-menu--links">
-      <a class="main-link" href="{{'/downloads.html' | relative_url}}">Downloads</a>
-      <a class="sub-link">2019 State Standard Report</a>
-      <a class="sub-link">2019 Leading Examples</a>
-      <a class="sub-link">2019 Criteria Questions</a>
-      <a class="sub-link">State Spotlights </a>
-      <a class="main-link" href="{{'/state-standard-of-excellence/leading-examples.html' | relative_url}}">Leading Examples</a>
-      <a class="main-link">Examples by Criteria</a>
-    </div>
-
   </nav>
 
   <div class="color-overlay">
     <span class="top-bar__logo"><a href="https://results4america.org/"><img src="{{'/images/rfa-white.svg' | relative_url }}" alt="Results for America 2018 Logo"></a></span>
-
-
   </div>
 </header>
 
