--- a/source/_sass/styles.scss
+++ b/source/_sass/styles.scss
@@ -41,5 +41,5 @@ $hyperlink-orange: #f77c50;
 @import 'expandable';
 @import 'filter';
 @import 'compact-panel';
-@import 'table-two';
 @import 'nav';
+@import 'examples-grid';
