--- a/source/_sass/_examples-grid.scss
+++ b/source/_sass/_examples-grid.scss
@@ -163,7 +163,7 @@ a.external-link-container {
     }
   }
   &.leading {
-    padding: 1rem;
+    // padding: 1rem;
   }
   .tooltip {
     &:before {
