--- a/source/_sass/_filter.scss
+++ b/source/_sass/_filter.scss
@@ -22,7 +22,7 @@
 .issues-dropdown-filter.select {
   background-color: transparent;
   margin: 0;
-  font-size: 0.8rem;
+  font-size: 0.74rem;
   @include breakpoint($large) {
     font-size: 1rem;
   }
@@ -30,7 +30,13 @@
   text-align: center;
   &::before {
     color: #fff;
-    padding-top: 4px;
+    font-size: 1.2rem;
+    padding-top: 6px;
+    @include breakpoint($large) {
+      padding-top: 4px;
+      font-size: 1.5rem;
+
+    }
   }
 }
 
