--- a/source/_sass/_compact-panel.scss
+++ b/source/_sass/_compact-panel.scss
@@ -61,6 +61,9 @@
         display: block;
         font-size: 1rem;
       }
+      .slide-panel__content {
+
+      }
     }
     i.slide-close-key {
       &::before {
