Fix modal scroll behavior

--- a/source/_includes/key-content.html
+++ b/source/_includes/key-content.html
@@ -2,9 +2,8 @@
   <div class="slide-panel__wrapper slide-panel__wrapper--key">
     <div class="slide-panel" data-direction="right" data-value="key">
       <div class="slide-panel__container slide-panel__container--key" style="right: -100%; display: none;">
-        <div class="row slide-panel__close"><a href="#" class="slide-panel__close"><i
-              class="material-icons slide-close-key"></i></a></div>
         <div class="slide-panel__content">
+          <div class="row slide-panel__close"><a href="#" class="slide-panel__close"><i class="material-icons slide-close-key"></i></a></div>
           <div class="slide-panel__key">
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Natus fugiat mollitia doloremque error amet
               doloribus laborum obcaecati repudiandae eaque reprehenderit?</p>
